@@ -2,6 +2,11 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-08-16 Takashi
+ PATCH: [ 1539568 ] draw icon at modified line (it was changed to line revision marks)
+  Src: GhostTextBuffer.cpp GhostTextBuffer.h MergeDoc.cpp MergeDoc.h
+  Src/editlib: ccrystaltextbuffer.cpp ccrystaltextbuffer.h ccrystaltextview.cpp
+
 2006-08-16 Kimmo
  PATCH: [ 1456356 ] Scrollbars sometimes not initially active
   Src: Merge.cpp
@@ -22,7 +27,7 @@ Add new items to top.
 
 2006-08-13 Takashi
  Japanese translation - update
-  Src/Languages/Japanese/MergeJapanese.rc
+  Src/Languages/Japanese: MergeJapanese.rc
 
 2006-08-13 Tim
  PATCH: [ 1539204 ] Remove '#' from '#differences' column
